--- a/package.json
+++ b/package.json
@@ -13,23 +13,33 @@
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.5",
+		"@vueuse/core": "^13.1.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-vue-next": "^0.507.0",
+		"motion-v": "^1.0.2",
 		"pinia": "^3.0.2",
+		"reka-ui": "^2.2.1",
+		"tailwind-merge": "^3.2.0",
+		"tw-animate-css": "^1.2.9",
 		"vue": "^3.5.13",
 		"vue-router": "^4.5.0"
 	},
 	"devDependencies": {
 		"@tsconfig/node22": "^22.0.1",
-		"@types/node": "^22.14.0",
+		"@types/node": "^22.15.11",
 		"@vitejs/plugin-vue": "^5.2.3",
 		"@vue/tsconfig": "^0.7.0",
 		"autoprefixer": "^10.4.21",
 		"npm-run-all2": "^7.0.2",
 		"postcss": "^8.5.3",
 		"prettier": "3.5.3",
+		"shadcn-vue": "^2.1.0",
 		"tailwindcss": "^4.1.5",
 		"typescript": "~5.8.0",
 		"vite": "^6.2.4",
 		"vite-plugin-vue-devtools": "^7.7.2",
 		"vue-tsc": "^2.2.8"
-	}
+	},
+	"packageManager": "pnpm@10.6.2+sha512.47870716bea1572b53df34ad8647b42962bc790ce2bf4562ba0f643237d7302a3d6a8ecef9e4bdfc01d23af1969aa90485d4cebb0b9638fa5ef1daef656f6c1b"
 }
