--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.5",
+		"@vercel/speed-insights": "^1.2.0",
 		"@vueuse/core": "^13.1.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
