--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,10 +3,11 @@
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
-    "baseUrl": "."
+      "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+      "paths": {
+          "@/*": ["./src/*"]
+      },
+      "baseUrl": ".",
+      "lib": ["ES2015", "DOM"]
   }
 }
