--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"dev": "vite dev",
 		"build": "run-p type-check \"build-only {@}\" --",
 		"preview": "vite preview",
 		"build-only": "vite build",
@@ -24,7 +24,8 @@
 		"tailwind-merge": "^3.2.0",
 		"tw-animate-css": "^1.2.9",
 		"vue": "^3.5.13",
-		"vue-router": "^4.5.0"
+		"vue-router": "^4.5.0",
+		"vue-sonner": "^1.3.2"
 	},
 	"devDependencies": {
 		"@tsconfig/node22": "^22.0.1",
