--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 # Development environment variables
-VITE_API_URL=https://5bd4-58-96-252-202.ngrok-free.app
+VITE_API_URL=https://c639-2406-3003-2001-311d-99b9-12e0-dddd-f101.ngrok-free.app 
 NODE_ENV=development
