--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 # Production environment variables
-VITE_API_URL= https://dc1f-2406-3003-2001-311d-a57c-aca8-17f-833b.ngrok-free.app
+VITE_API_URL= https://5ed929bca84a.ngrok-free.app
 NODE_ENV=production
