--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
 		"format": "prettier --write src/"
 	},
 	"dependencies": {
+		"@fingerprintjs/fingerprintjs": "^4.6.2",
 		"@tailwindcss/vite": "^4.1.5",
+		"@types/crypto-js": "^4.2.2",
 		"@vercel/speed-insights": "^1.2.0",
 		"@vueuse/core": "^13.1.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"crypto-js": "^4.2.0",
 		"lucide-vue-next": "^0.507.0",
 		"motion-v": "^1.0.2",
 		"pinia": "^3.0.2",
