--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 # Production environment variables
-VITE_API_URL=https://c639-2406-3003-2001-311d-99b9-12e0-dddd-f101.ngrok-free.app 
+VITE_API_URL=https://e3bf4469e202.ngrok-free.app
 NODE_ENV=production
