--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 # Development environment variables
-VITE_API_URL='/api'
+VITE_API_URL=https://e3bf4469e202.ngrok-free.app
 VITE_PROXY=https://e3bf4469e202.ngrok-free.app
 NODE_ENV=development
