--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
 		"@tailwindcss/vite": "^4.1.5",
 		"@types/crypto-js": "^4.2.2",
 		"@vercel/speed-insights": "^1.2.0",
-		"@vueuse/core": "^13.1.0",
+		"@vueuse/core": "^13.9.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"crypto-js": "^4.2.0",
+		"localforage": "^1.10.0",
 		"lucide-vue-next": "^0.507.0",
 		"motion-v": "^1.0.2",
 		"pinia": "^3.0.2",
-		"reka-ui": "^2.2.1",
+		"reka-ui": "^2.5.0",
 		"tailwind-merge": "^3.2.0",
 		"tw-animate-css": "^1.2.9",
 		"vue": "^3.5.13",
