--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 # Production environment variables
-VITE_API_URL=https://6b11608204f6.ngrok-free.app
+VITE_API_URL=https://unorational-haustorial-anibal.ngrok-free.dev
 NODE_ENV=production
